--- a/app/components/dashboard/views/createRideInfo.html
+++ b/app/components/dashboard/views/createRideInfo.html
@@ -38,7 +38,7 @@
             </div>
 
             <div layout="row" layout-align="center center">
-              <md-button type="submit" class="md-accent md-raised">Set pricing</md-button>
+              <md-button type="submit" ng-click="verifyInfo()" class="md-accent md-raised">Set pricing</md-button>
             </div>
           </form>
         </md-card-content>
