--- a/app/components/dashboard/views/dashboard.html
+++ b/app/components/dashboard/views/dashboard.html
@@ -2,11 +2,9 @@
 <!-- User sign up/login logic is managed here -->
 <div id="homePage" ng-controller="dashboardCtrl">
   <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
-      <h1 layout-align-gt-sm="center" class="md-toolbar-tools"><b>DASHBOARD</b></h1>
-      <!--
-      <md-button ng-click="showLogin($event)">LOGIN</md-button>
-      <md-button ng-click="showSignup($event)">SIGN UP</md-button>
-      -->
+      <h1 layout-align="left" class="md-toolbar-tools"><b>DASHBOARD</b></h1>
+      <md-button ng-click="logout()">LOGOUT</md-button>
+      <md-button ng-click="viewProfile()">PROFILE</md-button>
   </md-toolbar>
   <div id="outer-wrapper">
         <div ui-view></div>
