--- a/app/components/home/views/homeView.html
+++ b/app/components/home/views/homeView.html
@@ -1,7 +1,7 @@
 <!-- This is the home page (obvi) -->
 <div id="homePage" ng-controller="HomePageCtrl">
   <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
-      <h1 layout-align-gt-sm="left" class="md-toolbar-tools"><b>CARPOOL APP</b></h1>
+      <h1 layout-align-gt-sm="left" class="md-toolbar-tools"><b>CARPOOL APPLICATION</b></h1>
       <md-button ng-click="showLogin($event)">LOGIN</md-button>
       <md-button ng-click="showSignup($event)">SIGN UP</md-button>
   </md-toolbar>
