--- a/app/components/dashboard/views/searchRide.html
+++ b/app/components/dashboard/views/searchRide.html
@@ -1,43 +1,44 @@
-<md-content layout="row" layout-align="center center" flex class="md-padding" id="home-content">
-  <div class="section" id="dashboard-start" layout="row" layout-align="center center">
+<md-content layout="row" flex class="md-padding" id="home-content">
+  <div class="section" id="dashboard-start" layout="column" layout-align="center top">
 
-    <div layout="column" layout-align="center">
+    <div layout="row" layout-align="center">
       <md-card id="form">
         <md-card-content>
           <form>
             <div layout="row">
-              <md-input-container>
-                <label>Starting City</label>
-                <input type="text" ng-model="starting.city">
-              </md-input-container>
-              <md-input-container>
-                <label>Starting State</label>
-                <input type="text" ng-model="starting.state">
-              </md-input-container>
-            </div>
+              <div layout="column">
+                  <md-input-container>
+                    <label>Starting City</label>
+                    <input type="text" ng-model="starting.city">
+                  </md-input-container>
+                  <md-input-container>
+                    <label>Starting State</label>
+                    <input type="text" ng-model="starting.state">
+                  </md-input-container>
+              </div>
 
-            <div layout="row">
-              <md-input-container>
-                <label>Ending City</label>
-                <input type="text" ng-model="ending.city">
-              </md-input-container>
-              <md-input-container>
-                <label>Ending State</label>
-                <input type="text" ng-model="ending.state">
-              </md-input-container>
-            </div>
+              <div layout="column">
+                <md-input-container layout="column">
+                  <label>Ending City</label>
+                  <input type="text" ng-model="ending.city">
+                </md-input-container>
+                <md-input-container layout="column">
+                  <label>Ending State</label>
+                  <input type="text" ng-model="ending.state">
+                </md-input-container>
+              </div>
 
-            <div layout="row">
-              <md-input-container>
-                <label>Departure Date: </label>
-                <input type="date" ng-model="departureDate">
-              </md-input-container>
-              <md-input-container>
-                <label>Returning Date: </label>
-                <input type="date" ng-model="returningDate">
-              </md-input-container>
-            </div>
-
+              <div layout="column">
+                <md-input-container>
+                  <label>Departure Date: </label>
+                  <input type="text" ng-model="departureDate">
+                </md-input-container>
+                <md-input-container>
+                  <label>Returning Date: </label>
+                  <input type="text" ng-model="returningDate">
+                </md-input-container>
+              </div>
+          </div>
             <div layout="row" layout-align="center center">
               <md-button type="submit" class="md-accent md-raised">Search</md-button>
             </div>
@@ -46,7 +47,7 @@
       </md-card>
     </div>
 
-    <div layout="column" flex="50" layout-align="center">
+    <div layout="row" flex="50" layout-align="center">
       <img src="/assets/img/us_map.jpg" style="object-fit: contain; height: 50%;">
     </div >
 
