--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,6 +42,15 @@ md-content.md-padding {
   padding: 10px;
 }
 
+md-input-container #find-ride-form{
+  padding: 2px 2px 2px 2px;
+}
+
+#find-ride-form{
+  background-color: rgba(233,233,233,0.83);
+  padding: 0px 16px 0px 16px;
+}
+
 .fit{
   max-width: 100%;
   max-height: 100%;
@@ -52,10 +61,6 @@ md-content.md-padding {
   margin: 0px;
   color: white;
   font-size: 20px;
-}
-
-.dashboard-home-grid{
-
 }
 
 .dashboard-button a{
@@ -70,6 +75,7 @@ md-content.md-padding {
 md-icon.md-default-theme{
   color: black;
 }
+
 .dashboard-icon{
   display: inline-block;
   height: 50px;
@@ -95,14 +101,6 @@ md-icon.md-default-theme{
   overflow: auto;
 }
 
-#step1{
-  background-color: #FF7043;
-}
-
-.seat-button{
-  outline: 0;
-}
-
 .md-button.md-default-theme.login-with-facebook{
   background-color: #3b5998;
   color: white;
@@ -122,6 +120,10 @@ md-icon.md-default-theme{
   color: white;
   border-radius: 20px;
 
+}
+
+.seat-button{
+  outline: 0;
 }
 
 .exit-button-wrapper{
