attempt to fix button

--- a/app/components/dashboard/views/dashboard.html
+++ b/app/components/dashboard/views/dashboard.html
@@ -5,7 +5,7 @@
       <h1 layout-align="left" class="md-toolbar-tools"><b>DASHBOARD</b></h1>
       <img class="profilePicture" src="{{authData.facebook.profileImageURL}}" height="50px" width="50px">
       </img>
-      <md-button ng-click="viewProfile()" style="word-wrap: break-word;">{{authData.facebook.displayName}}</md-button>
+      <md-button ng-click="viewProfile()">{{authData.facebook.displayName}}</md-button>
       <md-button ng-click="logout()">LOGOUT</md-button>
   </md-toolbar>
   <div id="outer-wrapper">
