--- a/app/components/home/views/loginFormTmpl.html
+++ b/app/components/home/views/loginFormTmpl.html
@@ -14,16 +14,15 @@
       <div layout="column">
         <md-button type="submit" ng-click="loginWithFacebook()" class="login-with-facebook">Login with Facebook</md-button>
         <md-input-container>
-          <label>Username:</label>
+          <label>Username</label>
           <input type="text" ng-model="loginData.username">
         </md-input-container>
-        <md-input-container flex>
-          <label>Password:</label>
+        <md-input-container>
+          <label>Password</label>
           <input type="password" ng-model="loginData.password">
         </md-input-container>
         <md-button type="submit" class="md-accent md-raised">Login</md-button>
-        
-          
+        </div>
     </md-dialog-content>
   </form>
 </md-dialog>
