--- a/app/components/profile/views/profile.html
+++ b/app/components/profile/views/profile.html
@@ -1,16 +1,40 @@
 <div id="homePage" ng-controller="profileCtrl">
   <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
       <h1 layout-align="left" class="md-toolbar-tools"><b>PROFILE</b></h1>
-      <img class="profilePicture" src="{{authData.facebook.profileImageURL}}" height="50px" width="50px">
+      <img class="profilePicture" src="{{authData.facebook.profileImageURL}}">
       </img>
       <md-button ng-click="viewProfile()">{{authData.facebook.displayName}}</md-button>
       <md-button ng-click="logout()">LOGOUT</md-button>
   </md-toolbar>
-  <div id="outer-wrapper">
-      <div ui-view>
-          <img class="profilePicture" src="{{authData.facebook.profileImageURL}}" height="300px" width="300px">
-          </img>  
-      
-      </div>
-  </div>
-</div>
+    <div id="outer-wrapper">
+        <div ui-view>
+            <img src="{{authData.facebook.profileImageURL}}" height="300px" width="300px"></img>  
+
+
+        <!--<div ng-controller="AppCtrl" ng-cloak>-->
+  <md-content class="md-padding">
+    <md-tabs class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
+      <md-tab id="tab1">
+        <md-tab-label>Current Rides Posted</md-tab-label>
+        <md-tab-body>
+        </md-tab-body>
+      </md-tab>
+      <md-tab id="tab2">
+        <md-tab-label>Reviews</md-tab-label>
+        <md-tab-body>
+        </md-tab-body>
+      </md-tab>
+      <md-tab id="tab3">
+        <md-tab-label>Vehicle Information</md-tab-label>
+        <md-tab-body>
+         
+        </md-tab-body>
+      </md-tab>
+    </md-tabs>
+  </md-content>
+    </div>
+
+
+        </div>
+    </div>
+
