--- a/app/components/home/views/loginFormTmpl.html
+++ b/app/components/home/views/loginFormTmpl.html
@@ -1,3 +1,12 @@
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=1641802092772505";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <md-dialog aria-label="test">
   <form name="loginForm" ng-controller="LoginCtrl" ng-submit="verifyLogin()">
     <md-dialog-content>
@@ -11,6 +20,10 @@
           <input type="password" ng-model="loginData.password">
         </md-input-container>
         <md-button type="submit" class="md-accent md-raised">Login</md-button>
+        <md-button type="submit" class="md-accent md-raised">Facebook</md-button>
+    <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
+    
     </md-dialog-content>
+   
   </form>
 </md-dialog>
