--- a/app/components/dashboard/views/dashboard.html
+++ b/app/components/dashboard/views/dashboard.html
@@ -3,9 +3,9 @@
 <div id="homePage" ng-controller="dashboardCtrl">
   <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
       <h1 layout-align="left" class="md-toolbar-tools"><b>DASHBOARD</b></h1>
-      <img class="profilePicture" src="{{authData.facebook.profileImageURL}}">
+      <img class="profilePicture" src="{{getUserData().facebook.profileImageURL}}">
       </img>
-      <md-button ng-click="viewProfile()">{{authData.facebook.displayName}}</md-button>
+      <md-button ng-click="viewProfile()">{{getUserData().facebook.displayName}}</md-button>
       <md-button ng-click="logout()">LOGOUT</md-button>
   </md-toolbar>
   <div id="outer-wrapper">
