--- a/app/components/home/views/signupFormTmpl.html
+++ b/app/components/home/views/signupFormTmpl.html
@@ -1,16 +1,16 @@
 <md-dialog aria-label="test">
-  <form name="signupForm" ng-controller = "SignupCtrl" ng-submit="verifySignup()">
+  <form name="signupForm" ng-submit="verifySignup()">
     <md-dialog-content>
       <div layout="column">
         <md-input-container>
           <label>Username:</label>
           <input type="text" ng-model = "signupData.username">
         </md-input-container>
-        <md-input-container flex>
+        <md-input-container>
           <label>Password</label>
           <input type="password" ng-model = "signupData.password">
         </md-input-container>
-        <md-input-container flex>
+        <md-input-container>
           <label>Email</label>
           <input type="email" ng-model = "signupData.email">
         </md-input-container>
