--- a/app/components/profile/views/profile.html
+++ b/app/components/profile/views/profile.html
@@ -1,14 +1,14 @@
 <div id="homePage" ng-controller="profileCtrl">
   <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
       <h1 layout-align="left" class="md-toolbar-tools"><b>PROFILE</b></h1>
-      <img class="profilePicture" src="{{authData.facebook.profileImageURL}}">
+      <img class="profilePicture" src="{{getUserData().facebook.profileImageURL}}">
       </img>
-      <md-button ng-click="viewProfile()">{{authData.facebook.displayName}}</md-button>
+      <md-button ng-click="viewProfile()">{{getUserData().facebook.displayName}}</md-button>
       <md-button ng-click="logout()">LOGOUT</md-button>
   </md-toolbar>
     <div id="outer-wrapper">
         <div ui-view>
-            <img src="{{authData.facebook.profileImageURL}}" height="300px" width="300px"></img>  
+            <img src="{{getUserData().facebook.profileImageURL}}" height="300px" width="300px"></img>
 
 
         <!--<div ng-controller="AppCtrl" ng-cloak>-->
@@ -27,7 +27,7 @@
       <md-tab id="tab3">
         <md-tab-label>Vehicle Information</md-tab-label>
         <md-tab-body>
-         
+
         </md-tab-body>
       </md-tab>
     </md-tabs>
@@ -37,4 +37,3 @@
 
         </div>
     </div>
-
