--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,7 +32,7 @@ md-content.md-padding {
 
 .section{
   box-sizing: border-box;
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   padding: 0px 20px 0px 20px;
 }
