commit profile picture

--- a/app/components/profile/views/profile.html
+++ b/app/components/profile/views/profile.html
@@ -10,6 +10,7 @@
         <div ui-view>
             <img src="{{authData.facebook.profileImageURL}}" height="300px" width="300px"></img>  
 
+        <input type="text" name=displayName value = "{{authData.facebook.displayName}}"></input>
 
         <!--<div ng-controller="AppCtrl" ng-cloak>-->
   <md-content class="md-padding">
