--- a/app/components/home/views/homeView.html
+++ b/app/components/home/views/homeView.html
@@ -1,21 +1,24 @@
 <!-- This is the home page (obvi) -->
 <div id="homePage" ng-controller="HomeCtrl">
   <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
-      <h1 layout-align-gt-sm="left" class="md-toolbar-tools"><b>Hitch</b></h1>
-      <md-button ng-click="showLogin($event)">LOGIN</md-button>
+      <h1 layout-align-gt-sm="left" class="md-toolbar-tools">Hitch</h1>
+<!--        <img src="/assets/img/hitch_small_logo.png" height="100px" width="200px" style="object-fit: contain;">-->
+    <form name="loginForm" ng-controller="LoginCtrl">    
+      <md-button ng-click="loginWithFacebook()">LOGIN</md-button>
+    </form>  
       <!-- <md-button ng-click="showSignup($event)">SIGN UP</md-button> -->
   </md-toolbar>
-  <div id="outer-wrapper">
+  <div id="outer-wrapper"> 
       <md-content layout="column" layout-align="center center" flex class="md-padding" id="home-content">
 
         <div class="section" id="home-section" hide-gt-sm layout="row" layout-align="center center">
           <div layout="column" flex="60" hide-gt-sm layout-align="center">
-            <img src="/assets/img/car.png" style="object-fit: contain;">
+            <img src="/assets/img/hitch_car_logo.png" height="200px" width="400px" style="object-fit: contain;">
           </div>
         </div>
 
         <div class="section" id="home-section" hide-sm layout="row" layout-align="center center">
-              <img src="/assets/img/car.png" style="object-fit: contain;">
+              <img src="/assets/img/hitch_car_logo.png" height="800px" width="1000px" style="object-fit: contain;">
         </div>
       </md-content>
   </div>
