--- a/app/components/home/views/homeView.html
+++ b/app/components/home/views/homeView.html
@@ -1,11 +1,12 @@
 <!-- This is the home page (obvi) -->
 <div id="homePage" ng-controller="HomeCtrl">
   <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
-      <h1 layout-align-gt-sm="left" class="md-toolbar-tools">Hitch</h1>
-<!--        <img src="/assets/img/hitch_small_logo.png" height="100px" width="200px" style="object-fit: contain;">-->
-    <form name="loginForm" ng-controller="LoginCtrl">    
+     
+      <h1 layout-align-gt-sm="left" class="md-toolbar-tools"><b>Hitch</b></h1>
+      <!--        <img src="/assets/img/hitch_small_logo.png" height="100px" width="200px" style="object-fit: contain;">-->
+    <form name="loginForm" ng-controller="LoginCtrl">   
       <md-button ng-click="loginWithFacebook()">LOGIN</md-button>
-    </form>  
+   </form>
       <!-- <md-button ng-click="showSignup($event)">SIGN UP</md-button> -->
   </md-toolbar>
   <div id="outer-wrapper"> 
