--- a/app/components/profile/views/profile.html
+++ b/app/components/profile/views/profile.html
@@ -1,20 +1,21 @@
 <div id="homePage" ng-controller="profileCtrl">
   <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
       <h1 layout-align="left" class="md-toolbar-tools"><b>PROFILE</b></h1>
-      <img class="profilePicture" src="{{getUserData().facebook.profileImageURL}}">
-      </img>
-      <md-button ng-click="viewProfile()">{{getUserData().facebook.displayName}}</md-button>
+      <md-button ng-click="viewDashboard()">DASHBOARD</md-button>
       <md-button ng-click="logout()">LOGOUT</md-button>
   </md-toolbar>
     <div id="outer-wrapper">
         <div ui-view>
             <img src="{{getUserData().facebook.profileImageURL}}" height="300px" width="300px"></img>
 
-        <input type="text" name=displayName value = "{{authData.facebook.displayName}}"></input>
-
+        <md-input-container>
+          <label>{{getUserData().facebook.displayName}}</label>
+          <input type="text" ng-model="loginData.username" disabled value="{{getUserData().facebook.displayName}}">
+        </md-input-container>
+        
         <!--<div ng-controller="AppCtrl" ng-cloak>-->
   <md-content class="md-padding">
-    <md-tabs class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
+    <md-tabs id="profileMenu" class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
       <md-tab id="tab1">
         <md-tab-label>Current Rides Posted</md-tab-label>
         <md-tab-body>
