--- a/app/components/dashboard/views/searchRide.html
+++ b/app/components/dashboard/views/searchRide.html
@@ -12,8 +12,11 @@
                     <input type="text" ng-model="starting.city">
                   </md-input-container>
                   <md-input-container id="find-ride-form">
-                    <label>Starting State</label>
-                    <input type="text" ng-model="starting.state">
+                    <!--<label>Starting State</label>-->
+                    <md-select aria-label="state" ng-model="starting.state">
+                      <md-option ng-repeat="state in states" value="{{state.abbrev}}">{{state.abbrev}}</md-option>
+
+                  </md-select>
                   </md-input-container>
               </div>
 
@@ -23,8 +26,11 @@
                   <input type="text" ng-model="ending.city">
                 </md-input-container>
                 <md-input-container id="find-ride-form">
-                  <label>Ending State</label>
-                  <input type="text" ng-model="ending.state">
+                  <!--<label>State</label>-->
+                  <md-select aria-label="state" ng-model="ending.state">
+                    <md-option ng-repeat="state in states" value="{{state.abbrev}}">{{state.abbrev}}</md-option>
+
+                  </md-select>
                 </md-input-container>
               </div>
 
@@ -36,11 +42,25 @@
               </div>
           </div>
             <div layout="row" layout-align="center center">
-              <md-button type="submit" class="md-accent md-raised">Search</md-button>
+              <md-button type="submit" class="md-accent md-raised" ng-click="findRides()">Search</md-button>
             </div>
           </form>
         </md-card-content>
       </md-card>
+    </div>
+    <div layout="row" layout-align="center center">
+      <div id="map" flex="30"></div>
+      <div id="ride-list-container" flex="30">
+        <md-list>
+          <md-subheader>Rides! :D</md-subheader>
+          <md-list-item class="md-2-line" ng-repeat="ride in rides">
+            <div class="md-list-item-text" layout="column">
+              <h3>{{ride.driver}}</h3>
+              <h4>{{ride.description}}</h4>
+            </div>
+          </md-list-item>
+        </md-list>
+      </div>
     </div>
   </div>
 </md-content>
