--- a/app/components/dashboard/views/searchRide.html
+++ b/app/components/dashboard/views/searchRide.html
@@ -54,9 +54,9 @@
         <md-list>
           <md-subheader>Rides! :D</md-subheader>
           <md-list-item class="md-2-line" ng-repeat="ride in rides">
-            <div class="md-list-item-text" layout="column">
-              <h3>{{ride.driver}}</h3>
-              <h4>{{ride.description}}</h4>
+            <div class="md-list-item-text" layout="column" ng-show="(endCity == ride.end-location)">
+              <h3>{{ride.name}}</h3>
+              <h4>{{ride.comment}}</h4>
             </div>
           </md-list-item>
         </md-list>
