Facebook profile flex

--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -11,7 +11,7 @@
               <h3>Find ride! :D</h3>
             </a>
         </div>
-        <div class="dashboard-button">
+        <div class="dashboard-button md-accent">
           <a ui-sref="^.give.info">
             <md-icon class="dashboard-icon" md-svg-src="/assets/img/gift.svg"></md-icon>
             <h3>Give ride! :D</h3>
