--- a/app/components/dashboard/views/searchRide.html
+++ b/app/components/dashboard/views/searchRide.html
@@ -53,11 +53,14 @@
       <div id="ride-list-container" flex="30">
         <md-list>
           <md-subheader>Rides! :D</md-subheader>
-          <md-list-item class="md-2-line" ng-repeat="ride in rides">
-            <div class="md-list-item-text" layout="column" ng-show="(endCity == ride.end-location)">
+          <md-list-item class="md-2-line" ng-repeat="ride in rides" ng-show="!!rides.length">
+            <div class="md-list-item-text" layout="column">
               <h3>{{ride.name}}</h3>
               <h4>{{ride.comment}}</h4>
             </div>
+          </md-list-item>
+          <md-list-item class="md-2-line" ng-show="!rides.length">
+            <p>There are no rides between those two specified cities.</p>
           </md-list-item>
         </md-list>
       </div>
