--- a/app/components/dashboard/views/searchRide.html
+++ b/app/components/dashboard/views/searchRide.html
@@ -51,20 +51,30 @@
         </md-card>
         </div>
 
-        <div id="ride-list-container" flex="100">
+        <div id="ride-list-container">
           <md-list>
             <!--<md-subheader>Rides! :D</md-subheader>-->
             <md-list-item class="md-2-line" ng-repeat="ride in rides">
-              <div class="md-list-item-text" layout="column">
-                <h3>{{ride.driver}}</h3>
-                <h4>{{ride.description}}</h4>
+              <div layout="row" layout-align="left" flex="100">
+                <div class="md-list-item-text" layout="column" flex="90">
+                  <h3>{{ride.driver}}</h3>
+                  <h4>{{ride.description}}</h4>
+                </div>
+                <div layout="column" layout-align="center center">
+                  <div layout="row">
+                    <h4>$19.99</h4>
+                    <md-button class="md-accent md-raised">
+                      Buy Seat
+                    </md-button>
+                  </div>
+                </div>
               </div>
             </md-list-item>
           </md-list>
         </div>
 
       </div>
-    <div layout-gt-md="column" flex-gt-md="40" layout-align="top" show-gt-md>
+    <div hide show-gt-md layout="column" flex="40" layout-align="top">
       <div id="map" flex="100"></div>
     </div>
   </div>
