profile dialog box

--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -1,20 +1,15 @@
 <md-content layout="row" layout-align="center center" flex class="md-padding" id="home-content">
   <div class="section" id="dashboard-start" layout="row" layout-align="center center">
     <div layout="column" layout-align="center center" >
-      <div layout="row">
-        <h1>What do you want to do?</h1>
-      </div>
       <div id="dashboard-home-grid" layout="row">
         <div class="dashboard-button">
             <a ui-sref="^.find">
-              <md-icon class="dashboard-icon" md-svg-src="/assets/img/magnifying_glass.svg"></md-icon>
-              <h3>Find ride! :D</h3>
+              <h3>FIND A RIDE</h3>
             </a>
         </div>
         <div class="dashboard-button md-accent">
           <a ui-sref="^.give.info">
-            <md-icon class="dashboard-icon" md-svg-src="/assets/img/gift.svg"></md-icon>
-            <h3>Give ride! :D</h3>
+            <h3>POST A RIDE</h3>
           </a>
         </div>
       </div>
