--- a/app/components/dashboard/views/dashboard.html
+++ b/app/components/dashboard/views/dashboard.html
@@ -2,10 +2,12 @@
 <!-- User sign up/login logic is managed here -->
 <div id="homePage" ng-controller="dashboardCtrl">
   <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
-      <h1 layout-align="left" class="md-toolbar-tools"><b>DASHBOARD</b></h1>
+      <md-button id="hitch_button" layout-align="left" class="md-toolbar-tools" ng-click="viewDashboard()">Hitch</md-button>
+
       <img class="profilePicture" src="{{getUserData().facebook.profileImageURL}}">
       </img>
-      <md-button ng-click="viewProfile()">{{getUserData().facebook.displayName}}</md-button>
+    
+        <md-button ng-click="viewProfile()">{{getUserData().facebook.displayName}}</md-button>
       <md-button ng-click="logout()">LOGOUT</md-button>
   </md-toolbar>
   <div id="outer-wrapper">
