change to regular from bold

--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -14,10 +14,10 @@
                     <div id="profilePicture">
                         <img src="{{getUserData().facebook.profileImageURL}}"></img>
                     </div>
-                        <md-button class="md-accent sidenav_btn">Reviews</md-button>
-                        <md-button class="md-accent sidenav_btn">Rides</md-button>
-                        <md-button class="md-accent sidenav_btn">Vehicles</md-button>
-                        <md-button ng-click="openFacebook()" class="md-accent sidenav_btn">Facebook</md-button>
+                        <md-button class="md-accent sidenav_btn"><b>Reviews</b></md-button>
+                        <md-button class="md-accent sidenav_btn"><b>Rides</b></md-button>
+                        <md-button class="md-accent sidenav_btn"><b>Vehicles</b></md-button>
+                        <md-button ng-click="openFacebook()" class="md-accent sidenav_btn"><b>Facebook</b></md-button>
                         
                 </div>
                 <div class="dialogColumns" layout="column" flex="75">
