--- a/app/components/dashboard/views/dashboard.html
+++ b/app/components/dashboard/views/dashboard.html
@@ -7,7 +7,7 @@
       <img class="profilePicture" src="{{getUserData().facebook.profileImageURL}}">
       </img>
     
-        <md-button ng-click="viewProfile()">{{getUserData().facebook.displayName}}</md-button>
+        <md-button ng-click="showProfile($event)">{{getUserData().facebook.displayName}}</md-button>
       <md-button ng-click="logout()">LOGOUT</md-button>
   </md-toolbar>
   <div id="outer-wrapper">
