I honestly can't remember what was changed
:P

--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -1,6 +1,7 @@
 <md-content layout="row" layout-align="center center" flex class="md-padding" id="home-content">
-  <div class="section" id="dashboard-start" layout="row" layout-align="center center">
-    <div layout="column" layout-align="center center" >
+  <div class="section" id="dashboard-start" layout="row" layout-align="left center">
+
+    <div layout="column" flex="75" layout-align="center center" >
       <div layout="row">
         <h1>What do you want to do?</h1>
       </div>
@@ -12,12 +13,30 @@
             </a>
         </div>
         <div class="dashboard-button">
-          <a ui-sref="^.give.info">
+          <a ui-sref="^.post.info">
             <md-icon class="dashboard-icon" md-svg-src="/assets/img/gift.svg"></md-icon>
-            <h3>Give ride! :D</h3>
+            <h3>Post ride! :D</h3>
           </a>
         </div>
       </div>
+    </div>
+
+    <div layout="column" flex="25" layout-align="top">
+      <md-list style="y-overflow: auto;">
+        <md-subheader style="background-color: #424242; color: white;">Upcoming Rides</md-subheader>
+        <md-list-item class="md-2-line" ng-repeat="trip in getProfileData().passenger_trips">
+          <div layout="row">
+            <img ng-src="{{trip.image_url}}" class="md-avatar" />
+            <div layout="column">
+              <h5 style="margin:2px;">Driver: {{trip.driver_name}}</h4>
+              <h6 style="margin:2px;">Departing: {{trip.start_time}}</h4>
+              <h6 style="margin:2px;">From: {{trip.from}}</h4>
+              <h6 style="margin:2px;">To: {{trip.to}}</h4>
+            </div>
+          </div>
+          <md-divider ></md-divider>
+        </md-list-item>
+      </md-list>
     </div>
   </div>
 </md-content>
