--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,16 @@ div{
 #ride-list-container{
   margin: 5px;
   padding: 5px;
+  overflow-y: scroll;
+}
+
+.md-avatar{
+  border-radius: 30px;
+  border: 1px solid #ddd;
+  display: inline-block;
+  margin: 4px 16px;
+  width: 48px;
+  height: 48px;
 }
 
 #map {
