--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -1,4 +1,4 @@
-<md-content layout="row" layout-align="center center" flex class="md-padding" id="home-content">
+<md-content layout="row" layout-align="center center" flex class="md-padding" id="home-content" data-ng-init="retrievePassengerTripData()">
   <div class="section" id="dashboard-start" layout="row" layout-align="left center">
 
     <div layout="column" flex="75" layout-align="center center" >
@@ -24,11 +24,11 @@
     <div layout="column" flex="25" layout-align="top">
       <md-list style="y-overflow: auto;">
         <md-subheader style="background-color: #424242; color: white;">Upcoming Rides</md-subheader>
-        <md-list-item class="md-2-line" ng-repeat="trip in getProfileData().passenger_trips">
+        <md-list-item class="md-2-line" ng-repeat="trip in tripData">
           <div layout="row">
             <img ng-src="{{trip.image_url}}" class="md-avatar" />
             <div layout="column">
-              <h5 style="margin:2px;">Driver: {{trip.driver_name}}</h4>
+              <h5 style="margin:2px;">Driver: {{trip.name}}</h4>
               <h6 style="margin:2px;">Departing: {{trip.start_time}}</h4>
               <h6 style="margin:2px;">From: {{trip.from}}</h4>
               <h6 style="margin:2px;">To: {{trip.to}}</h4>
