--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -26,7 +26,7 @@
         <md-subheader style="background-color: #424242; color: white;">Upcoming Rides</md-subheader>
         <md-list-item class="md-2-line" ng-repeat="trip in tripData">
           <div layout="row">
-            <img ng-src="{{trip.image_url}}" class="md-avatar" />
+            <img ng-src="{{trip.img_url}}" class="md-avatar" />
             <div layout="column">
               <h5 style="margin:2px;">Driver: {{trip.name}}</h4>
               <h6 style="margin:2px;">Departing: {{trip.start_time}}</h4>
