added review dialog box

--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -14,5 +14,8 @@
         </div>
       </div>
     </div>
-  </div>
+  <md-button ng-click="showReviewForm($event)">Review</md-button>
+  
+</div>
+          
 </md-content>
