fixed post ride button src

--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -9,7 +9,7 @@
             </a>
         </div>
         <div class="dashboard-button md-accent">
-          <a ui-sref="^.give.info">
+          <a ui-sref="^.post.info">
             <h3>POST A RIDE</h3>
           </a>
         </div>
