--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -3,54 +3,18 @@
 <md-dialog aria-label="test">
   <form name="profileForm" ng-controller="profileCtrl">
     <md-dialog-content>
-        <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
-            <h1 id="profileDisplayName" layout-align="left" class="md-toolbar-tools">{{getUserData().facebook.displayName}}</h1>
-        </md-toolbar>
+        <div layout="row">
+            <img id="profileAvatar" src="{{getUserData().facebook.profileImageURL}}" ng-click="openFacebook()"></img>
+
+            <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
+                <h1 id="profileDisplayName" layout-align="left" class="md-toolbar-tools">{{getUserData().facebook.displayName}}             </h1>
+            </md-toolbar>
+        </div>
         <div id="profile_dialog">
 
         <div layout="column" style="height:400px;">
-            <section layout="row" flex>
-            <div layout="row" flex>
-                <div class="dialogColumns" layout="column" flex="25">
-                    <div id="profilePicture">
-                        <img src="{{getUserData().facebook.profileImageURL}}"></img>
-                    </div>
-                        <md-button ng-click="openReviews()" class="md-accent sidenav_btn"><b>Reviews</b></md-button>
-                        <md-button class="md-accent sidenav_btn"><b>Rides</b></md-button>
-                        <md-button class="md-accent sidenav_btn"><b>Vehicles</b></md-button>
-                        <md-button ng-click="openFacebook()" class="md-accent sidenav_btn"><b>Facebook</b></md-button>
-                        
-                </div>
-                <div class="dialogColumns" layout="column" flex="75">
-                    <!--
-                    <div class="tabbable tabs-left">
-                      <ul class="nav nav-tabs">
-                         <li ng-class="getTabClass(1)" ng-click="setActiveTab(1)"><a href="#deal" data-toggle="tab">Deal</a></li>
-                         <li ng-class="getTabClass(2)" ng-click="setActiveTab(2)"><a href="#bond" data-toggle="tab">Bond</a></li>
-                         <li ng-class="getTabClass(3)" ng-click="setActiveTab(3)"><a href="#collateral" data-toggle="tab">Collateral</a></li>
-                         <li ng-class="getTabClass(4)" ng-click="setActiveTab(4)"><a href="#rating" data-toggle="tab">Rating</a></li>
-                      </ul>
-                      <div class="tab-content">
-                        <div ng-class="getTabPaneClass(1)" id="deal">    
-                            {{tab1}}
-                         </div>       
-
-                        <div ng-class="getTabPaneClass(2)" id="bond">     
-                          {{tab2}}
-                        </div>
-
-                        <div ng-class="getTabPaneClass(3)" id="collateral">     
-                          {{tab3}}
-                        </div>
-
-                        <div ng-class="getTabPaneClass(4)" id="rating">     
-                          {{tab4}}
-                        </div>      
-
-                      </div>
-                    </div>
-                
-                <md-tabs class="md-accent tabs-left" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
+          
+            <md-tabs class="tabs-left" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
                         <md-tab id="tab1">
                             <md-tab-label>REVIEWS</md-tab-label>
                             <md-tab-body>
@@ -72,24 +36,11 @@
                               data.selectedIndex = 2;
                             </md-tab-body>
                         </md-tab>
-                        <md-tab id="tab4">
-                            <md-tab-label>FACEBOOK</md-tab-label>
-                            <md-tab-body>
-                              View for Item #4 <br/>
-                              data.selectedIndex = 2;
-                            </md-tab-body>
-                        </md-tab>
-                    </md-tabs>
-                -->
-                <ul class="nav nav-tabs nav-stacked md-accent">
-                    <li role="presentation"><a href="#">REVIEWS</a></li>
-                    <li role="presentation"><a href="#">RIDES</a></li>
-                    <li role="presentation"><a href="#">VEHICLES</a></li>
-                    <li role="presentation"><a href="#">FACEBOOK</a></li>
-                </ul>
-                </div>
+                        </md-tabs>
+                
+            <!--    
             </div>
-            </section>
+            </section>-->
         </div>
         </div>
     </md-dialog-content>
