--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -65,9 +65,9 @@
                 </div>
                 <div layout="column" flex="40" >
                   <div layout="row">
-                    <div layout="column" flex="50" style="word-wrap: break-word;">
-                      <div layout="row" layout-align="end">
-                        <h4 >${{ride.seat_price}}</h4>
+                    <div layout="column" flex="50" >
+                      <div layout="row" layout-align="end" style="word-wrap: break-word;">
+                        <h4>${{ride.seat_price}}</h4>
                       </div>
                     </div>
                     <div layout="column" flex="50">
