--- a/app/components/dashboard/views/reviewFormTmpl.html
+++ b/app/components/dashboard/views/reviewFormTmpl.html
@@ -9,9 +9,10 @@
         <div layout="column" style="height:450px;">
             <section layout="column" flex>
                 <md-input-container>
-                    <label>Driver</label>
-                    <input type="text" disabled ng-model="driverInfo">
-                </md-input-container>
+                    <img ng-src="{{trip.img_url}}" class="md-avatar" />
+                    <h5 style="margin:2px;">Driver: {{trip.name}}</h4>
+              
+                    </md-input-container>
                 <md-select placeholder="DRIVER ABILITY" aria-label="driver_abilities" ng-model="driver.rating">
                     <md-option value="1">1</md-option>
                     <md-option value="2">2</md-option>
